--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
 
   <!-- 👍 YOUR HTML HERE 👍 -->
-
+  <img id="inn" src="">
+  <img id="dagger" src="">
+  <img id="bag" src="">
 
 
   <!-- I RECOMMEND YOU LEAVE THE REST UNTOUCHED -->
