finally the dagger!

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <img id="inn" src="">
   <img id="dagger" src="">
   <img id="bag" src="">
+  <section id="heroDetails">
+
+  </section>
 
 
   <!-- I RECOMMEND YOU LEAVE THE REST UNTOUCHED -->
