--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <img id="inn" src="">
   <img id="dagger" src="">
   <img id="bag" src="">
-  <section id="heroDetails">
+  <section id="heroStats">
 
   </section>
 
