section 4 till 3rd bullet

--- a/index.html
+++ b/index.html
@@ -13,8 +13,17 @@
   <img id="dagger" src="">
   <img id="bag" src="">
   <section id="heroStats">
-
   </section>
+  <form onsubmit="submitName(); return false">
+    <div class="formSection">
+        <h2>Re-name your hero!</h2>
+        <label for="name">New Name:</label>
+        <input type="text" id="name">
+    </div>
+    <div class="button">
+        <button type="default">Submit</button>
+    </div>
+</form>
 
 
   <!-- I RECOMMEND YOU LEAVE THE REST UNTOUCHED -->
